# navapp

./: .gitignore  CMakeLists.txt  README.md  build.sh  e_net_a_weights.pt  edges_data.txt  output.txt  output2.txt  setup.sh  start.sh  t_net_a_weights.pt  valhalla.json
cost_model/: CMakeCache.txt  CMakeLists.txt  EdgeCostModel.cc  Makefile  cmake_install.cmake  model.cc  model.h  train_model
src/model/: CMakeLists.txt  model.cc  model.h
src/model/data/: route_a_e.txt  route_a_t.txt  route_b_e.txt  route_b_t.txt  route_c_e.txt  route_c_t.txt
src/model/saved_routes_part_1/data_no_rush/: route_a_e.txt  route_a_t.txt  route_b_e.txt  route_b_t.txt  route_c_e.txt
src/model/saved_routes_part_1/data_rush/: route_a_e.txt  route_a_t.txt  route_c_e.txt  route_c_t.txt
src/model/saved_routes_part_1/weights_no_rush/: e_net_a_weights.pt  t_net_a_weights.pt  t_net_start_weights_old.pt
src/model/saved_routes_part_1/weights_rush/: e_net_start_weights.pt  t_net_a_weights.pt
src/model/saved_routes_part_2/weights/: e_net_a_weights.pt  e_net_start_weights_old.pt  t_net_a_weights.pt
src/model/saved_routes_part_2/weights/data/: route_a_e.txt  route_b.txt  route_b_t.txt
src/model/saved_routes_part_3/no rush/weights/: e_net_a_weights.pt  t_net_a_weights.pt
src/model/saved_routes_part_3/no rush/weights/data/: route_a_e.txt  route_a_t.txt  route_b_e.txt  route_b_t.txt  route_c_e.txt  route_c_t.txt
src/model/saved_routes_part_3/rush/weights/: e_net_a_weights.pt  t_net_a_weights.pt  t_net_start_weights.pt
src/model/saved_routes_part_3/rush/weights/data/: route_a_e.txt  (+2 more)
src/model/weights/: e_net_a_weights.pt  t_net_a_weights.pt
(+31 files in other folders)
